# autoscaffold

./: Boost-License  GPLv3-Licence  LICENSE  README.md  README.txt  configure.sh
am/: additional-build-machinary.ac  astyle.ac  automake.ac  boost.ac  ccache.ac  clang.ac  coverage.ac  cpp11.ac  cpp14.ac  data_common.mk  disable-detection-of-compilers-unused-by-me.ac  fuma.ac  gcov.mk  headers.ac  mysql.ac  openssl.ac  openssl.mk  output.ac  postgres.ac  programs.ac  pthread.ac  silent-rules.ac  source_common.mk  test_common.mk  webtoolkit.ac  webtoolkit.am
doc/: 100-generating-a-new-project.md  100-getting-started.md
example/: 200-openssl-example-Makefile.am  200-webtoolkit-http-example-Makefile.am  executable.am  library.am  test.am
m4/: fuma_ax_astyle.m4  fuma_ax_ccache.m4  fuma_ax_compare_postgres_header_version.m4  fuma_ax_postgres.m4  fuma_ax_set_postgres_version.m4  fuma_ax_set_webtoolkit_version.m4  fuma_ax_webtoolkit.m4  gcov.m4
mk/: Makefile.am
mk/sources/lib/: Makefile.am
mk/sources/src/: Makefile.am
platform/: centos-scl-toolset-override.sh
scripts/: configure.sh  run.sh
stubs/: TestHelper.hpp  convert_postgres_version_num_to_major_minor_micro.cpp  test_build.cpp  test_psql.cpp
